gccida/g2/mark_referenced_regs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_referenced_regs/src/caller-save.c:1051:31: error: expected expression
mark_referenced_regs( *( rtx *)&x[1]); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_referenced_regs/src/caller-save.c:1100:31: error: expected expression
mark_referenced_regs( *( rtx *)&rtwint[2 * v21 + 2]); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_referenced_regs/src/caller-save.c:1127:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v11] - 5) > 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_referenced_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mark_referenced_regs/src/obj/caller-save.o] Error 1
